gen/pubsub/v1beta2/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-pubsub1_beta2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/pubsub/v1beta2/lib)
error[E0423]: expected value, found struct `subscriptions::SubscriptionsActions`
   --> gen/pubsub/v1beta2/lib/src/lib.rs:809:13
    |
809 |             subscriptions::SubscriptionsActions
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `subscriptions::SubscriptionsActions { /* fields */ }`?

error[E0423]: expected value, found struct `topics::TopicsActions`
   --> gen/pubsub/v1beta2/lib/src/lib.rs:813:13
    |
813 |             topics::TopicsActions
    |             ^^^^^^^^^^^^^^^^^^^^^ did you mean `topics::TopicsActions { /* fields */ }`?

error[E0423]: expected value, found struct `subscriptions::SubscriptionsActions`
    --> gen/pubsub/v1beta2/lib/src/lib.rs:2795:17
     |
2795 |                 subscriptions::SubscriptionsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `subscriptions::SubscriptionsActions { /* fields */ }`?

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-pubsub1_beta2`.

To learn more, run the command again with --verbose.
